VSE: Proxy smaller than 100% produces wrong sizes in the preview window when using Offset or Crop for movie/image strips #78579

Closed
opened 2020-07-03 17:30:39 +02:00 by Neon Cipher · 8 comments

System Information
Operating system: Linux-4.9.0-12-amd64-x86_64-with-debian-9.12 64 Bits
Graphics card: Gallium 0.4 on AMD KAVERI (DRM 2.49.0 / 4.9.0-12-amd64, LLVM 3.9.1) X.Org 4.3 (Core Profile) Mesa 13.0.6

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: 5a13f682ee
Worked: (newest version of Blender that worked as expected)

Short description of error
When using Offset or Crop for an input strips, the size of those strips will be displayed incorrectly in the preview window if I use Proxy different than 100%.
This bug affects both movie and image strips and causes wrong visualization only in the preview window, the actual resulting output renders correctly.
It looks like Crop and Offset is applied without compensating for the altered proxy footage dimensions. They should be compensated for the proxy size.
I recorded a screencast with the steps to reproduce the bug:
https://youtu.be/VrmboFHjBFA

Exact steps for others to reproduce the error

  1. Add a movie strip 1920x1080 px (http://neoncipher.net/video-1920x1080.mp4)
  2. Add a movie strip 640x480 px (http://neoncipher.net/video-640x360.mp4)
  3. What we want to do is to put the smaller footage above the bigger to get "picture-in-picture" effect:
  • select the 640x480 strip
  • check "offset" in the strip's adjusting properties to make the strip go to it's real non-stretched size
  • select "Alpha over" as Blend in the strip's adjusting properties
  1. Note the correct size of the 640x480 image in the preview window.
  2. Set and build 25% proxies for both strips
  3. In the preview window select View --> Fit preview in window
  4. Choose proxy size 25% in the view settings.
  5. Note how tiny the 640x480 footage's image has become in the preview window (left bottom corner).
  6. When you change Position X or Y in the 640x480's strip Offset section, the image temporarily becomes a bit bigger (but still not correct size) in the preview window, but after clicking somewhere in the sequencer strip's area, becomes tiny again.
    attached .blend file proxies-bug.blend
**System Information** Operating system: Linux-4.9.0-12-amd64-x86_64-with-debian-9.12 64 Bits Graphics card: Gallium 0.4 on AMD KAVERI (DRM 2.49.0 / 4.9.0-12-amd64, LLVM 3.9.1) X.Org 4.3 (Core Profile) Mesa 13.0.6 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-02 22:21, hash: `5a13f682ee` Worked: (newest version of Blender that worked as expected) **Short description of error** When using Offset or Crop for an input strips, the size of those strips will be displayed incorrectly in the preview window if I use Proxy different than 100%. This bug affects both movie and image strips and causes wrong visualization only in the preview window, the actual resulting output renders correctly. It looks like Crop and Offset is applied without compensating for the altered proxy footage dimensions. They should be compensated for the proxy size. I recorded a screencast with the steps to reproduce the bug: https://youtu.be/VrmboFHjBFA **Exact steps for others to reproduce the error** 1. Add a movie strip 1920x1080 px (http://neoncipher.net/video-1920x1080.mp4) 2. Add a movie strip 640x480 px (http://neoncipher.net/video-640x360.mp4) 3. What we want to do is to put the smaller footage above the bigger to get "picture-in-picture" effect: - select the 640x480 strip - check "offset" in the strip's adjusting properties to make the strip go to it's real non-stretched size - select "Alpha over" as Blend in the strip's adjusting properties 4. Note the correct size of the 640x480 image in the preview window. 5. Set and build 25% proxies for both strips 6. In the preview window select View --> Fit preview in window 7. Choose proxy size 25% in the view settings. 8. Note how tiny the 640x480 footage's image has become in the preview window (left bottom corner). 9. When you change Position X or Y in the 640x480's strip Offset section, the image temporarily becomes a bit bigger (but still not correct size) in the preview window, but after clicking somewhere in the sequencer strip's area, becomes tiny again. attached .blend file [proxies-bug.blend](https://archive.blender.org/developer/F8661752/proxies-bug.blend)
Author

Added subscriber: @neoncipher

Added subscriber: @neoncipher

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This comment was removed by @iss

*This comment was removed by @iss*

Added subscriber: @mrlemonyfresh

Added subscriber: @mrlemonyfresh

This is particularly troubling when creating tutorials using the sequencer. If you do any zoom ins on menu items or text, it's quite hard to recognise what you're looking at.

This is particularly troubling when creating tutorials using the sequencer. If you do any zoom ins on menu items or text, it's quite hard to recognise what you're looking at.

This issue was referenced by 5372924983

This issue was referenced by 537292498324808c4621f0a749e9f48ee40da7be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-07-10 16:18:42 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78579
No description provided.